test/ll_parser_primary_command_test.test
*PARSER*:
    print selector ""
        block standard: data paragraph
        block standard: math
        block standard: text
        block standard: label
        block standard: code
        block TOP LEVEL: data
        block TOP LEVEL: LINE LEVEL
        block TOP LEVEL: TOP LEVEL
    print pass
        top
        operator [code, math]
        primary []
    trace [+ parser commands, + warnings ]
*PARSER*:
    begin block BLOCK1
    define primary variable ``X Y 1'' [code]
           with module M with location 100
    print primary variable ``''
        block BLOCK1: variable ``X Y 1'' [code]
                      with location 100 in module M
    test primary ``X Y 1'' [code]
                   ^^^^^
        found variable ``X Y 1'' M 100
    test primary ``X Y 1 FOO'' [code]
                   ^^^^^
        found variable ``X Y 1'' M 100
ERROR: in line ##: no definition found:
    test primary ``X Y'' [code]
                 ^^^^^^^
    define primary variable ``X Y'' [code]
           with module M with location 200
    test primary ``X Y 1 FOO'' [code]
                   ^^^^^
        found variable ``X Y 1'' M 100
    test primary ``X Y'' [code]
                   ^^^
        found variable ``X Y'' M 200
ERROR: in line ##: no definition found:
    test primary ``X'' [code]
                 ^^^^^
    print primary variable ``''
        block BLOCK1: variable ``X Y 1'' [code]
                      with location 100 in module M
        block BLOCK1: variable ``X Y'' [code]
                      with location 200 in module M
    end block BLOCK1
    print primary variable ``''
        nothing found
*PARSER*:
    begin block BLOCK1
    define primary function ``(X) "+" (Y)'' [code]
    print primary function ``''
        block BLOCK1: function ``(X)"+"(Y)'' [code]
                      with location 0 in module [$ MISSING $]
    test primary ``(A)+(B)'' [code]
                   ^^^^^^^
        (A)"+"(B)
    test primary ``{|A|}+(B)'' [code]
                   ^^^^^^^^^
        {|A|}"+"(B)
    test primary ``{|A 1|}+(B)'' [code]
                   ^^^^^^^^^^^
        {|A 1|}"+"(B)
ERROR: in line ##: no definition found:
    test primary ``(A)+(B)+(C)'' [code]
                 ^^^^^^^^^^^^^^^
ERROR: in line ##: no definition found:
    test primary ``(A)+'' [code]
                 ^^^^^^^^
    end block BLOCK1
*PARSER*:
    begin block BLOCK1
    define primary function ``F (X) ({|Y|}?={|Z|})'' [code]
    print primary function ``''
        block BLOCK1: function ``F(X)(Y ?= {|Z|})'' [code]
                      with location 0 in module [$ MISSING $]
    test primary ``F (A) (B)'' [code]
                   ^^^^^^^^^
        F(A)(B)
    test primary ``F (A)'' [code]
                   ^^^^^
        F(A){|Z|}
ERROR: in line ##: no definition found:
    test primary ``F'' [code]
                 ^^^^^
    end block BLOCK1
*PARSER*:
    begin block BLOCK1
    define primary function ``F (X) G ({|Y|}?={|Q|}) H (Z)'' [code]
    print primary function ``''
        block BLOCK1: function ``F(X)G(Y ?= {|Q|})H(Z)'' [code]
                      with location 0 in module [$ MISSING $]
    test primary ``F (A) G (B) H ( C )'' [code]
                   ^^^^^^^^^^^^^^^^^^^
        F(A)G(B)H(C)
    test primary ``F (A) H (B) G ( C )'' [code]
                   ^^^^^^^^^^^^^^^^^^^
        F(A)G(C)H(B)
    test primary ``F (A) H (B)'' [code]
                   ^^^^^^^^^^^
        F(A)G{|Q|}H(B)
ERROR: in line ##: no definition found:
    test primary ``F (A) G (B)'' [code]
                 ^^^^^^^^^^^^^^^
    end block BLOCK1
